docs: find currency handlers
