# app/docs/swagger.json
@@ -34,7 +34,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.FindAllCurrencyResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handler.FindAllCurrencyResponse"
+                            }
                         }
                     },
                     "500": {
@@ -79,6 +82,44 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/exception.BadRequestException"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/exception.InternalServerException"
+                        }
+                    }
+                }
+            }
+        },
+        "/currency/code/{code}": {
+            "get": {
+                "description": "find currency by code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Currencies"
+                ],
+                "summary": "Find Currency By Code",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "currency code",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.FindCurrencyByCodeResponse"
                         }
                     },
                     "500": {
@@ -146,6 +187,42 @@
             }
         },
         "/currency/{id}": {
+            "get": {
+                "description": "find currency by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Currencies"
+                ],
+                "summary": "Find Currency By ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "currency id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.FindCurrencyByIdResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/exception.InternalServerException"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "delete a currency",
                 "consumes": [
@@ -454,6 +531,120 @@
             }
         },
         "handler.FindAllCurrencyResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "USD"
+                },
+                "country": {
+                    "type": "string",
+                    "example": "United States"
+                },
+                "country_code": {
+                    "type": "string",
+                    "example": "USA"
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "2024-09-05 02:28:41.425 -0300"
+                },
+                "created_by": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "fic": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Dollar"
+                },
+                "number": {
+                    "type": "integer",
+                    "example": 840
+                },
+                "search_url": {
+                    "type": "string",
+                    "example": "http://usd-exchange.com"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2024-09-05 02:28:41.425 -0300"
+                },
+                "updated_by": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "usd_exchange_rate": {
+                    "type": "number",
+                    "example": 1
+                }
+            }
+        },
+        "handler.FindCurrencyByCodeResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "USD"
+                },
+                "country": {
+                    "type": "string",
+                    "example": "United States"
+                },
+                "country_code": {
+                    "type": "string",
+                    "example": "USA"
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "2024-09-05 02:28:41.425 -0300"
+                },
+                "created_by": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "fic": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Dollar"
+                },
+                "number": {
+                    "type": "integer",
+                    "example": 840
+                },
+                "search_url": {
+                    "type": "string",
+                    "example": "http://usd-exchange.com"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2024-09-05 02:28:41.425 -0300"
+                },
+                "updated_by": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "usd_exchange_rate": {
+                    "type": "number",
+                    "example": 1
+                }
+            }
+        },
+        "handler.FindCurrencyByIdResponse": {
             "type": "object",
             "properties": {
                 "code": {
